--- a/mockingbird/Cargo.toml
+++ b/mockingbird/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mockingbird"
-version = "0.0.1"
+version = "0.0.2"
 edition = "2021"
 authors = ["Sergio Benitez <sb@sergio.bz>"]
 license = "MIT OR Apache-2.0"
@@ -11,7 +11,8 @@ readme = "../README.md"
 [dependencies]
 serde = { version = "1.0.197", features = ["derive"] }
 rustc-hash = { version = "1.1" }
+xflags = "0.3.2"
 
 [dependencies.harper]
-version = "0.0.1"
+version = "0.0.2"
 path = "../lib"
